apps/generic/overlays/overture/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overture
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
